--- a/firebase.json
+++ b/firebase.json
@@ -1,17 +1,11 @@
 {
   "hosting": {
-    "site": "irshaad",
+    "target": "irshaad",
     "public": "build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   }
 }
